# sggmm

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml
sggmm/: __main__.py  cli.py  mod.py
